Start working on reviews page

--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>VAGS</title>
     <link href="/css/bootstrap.min.css" rel="stylesheet">
@@ -190,7 +191,7 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-md-3 col-md-offset-3">
-                            <a href="#" class="btn">ВСЕ ОТЗЫВЫ</a>
+                            <a href="/reviews.html" class="btn">ВСЕ ОТЗЫВЫ</a>
                         </div>
                         <div class="col-md-3">
                             <a href="#" class="btn btn--secondary">Оставить ОТЗЫВ</a>
