Start working on products page

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                         <div class="col-md-10 col-md-offset-1">
                             <div class="row">
                                 <div class="col-md-3">
-                                    <a href="#"  class="text-center">
+                                    <a href="/products.html"  class="text-center">
                                         <img class='img-responsive' src="/img/products--1.png" alt="">
                                         <h3><span>Инсекстициды</span></h3>
                                     </a>
@@ -194,7 +194,7 @@
                             <a href="/reviews.html" class="btn">ВСЕ ОТЗЫВЫ</a>
                         </div>
                         <div class="col-md-3">
-                            <a href="#" class="btn btn--secondary">Оставить ОТЗЫВ</a>
+                            <a href="/reviews.html#reviews-form" class="btn btn--secondary">Оставить ОТЗЫВ</a>
                         </div>
                     </div>
                 </div>
@@ -323,7 +323,7 @@
                         <div class="col-md-4">
                             Оптовые продажи:
                         </div>
-                        <div class="col-md-4">
+                        <div class="col-md-5">
                             <a href="mailto:order@vag-group.com">order@vag-group.com</a>
                         </div>
                     </div>
@@ -331,7 +331,7 @@
                         <div class="col-md-4">
                                 Розничаня сеть:
                         </div>
-                        <div class="col-md-4">
+                        <div class="col-md-5">
                             <a href="mailto:order2@vag-group.com">order2@vag-group.com</a>
                         </div>
                     </div>
@@ -339,7 +339,7 @@
                         <div class="col-md-4">
                                 Служба поддержки: 
                         </div>
-                        <div class="col-md-4">
+                        <div class="col-md-5">
                             <a href="mailto:help@vag-group.com"> help@vag-group.com</a>
                         </div>
                     </div>
@@ -360,7 +360,7 @@
                         <div class="col-md-5">
     
                             <div class="row">
-                                    <div class="col-md-4">
+                                    <div class="col-md-5">
                                             <h3>Мы в соцсетях:</h3>
                                     </div>
                                     <div class="col-md-6">
