--- a/reviews.html
+++ b/reviews.html
@@ -113,7 +113,7 @@
                     </nav>
                 </div>
 
-                <h3 class="text-center heading-secondary"><strong>Оставить отзыв</strong></h3>
+                <h3 class="text-center heading-secondary" id='reviews-form'><strong>Оставить отзыв</strong></h3>
                     <div class="row">
                         <div class="col-md-8 col-md-offset-2">
 
@@ -176,7 +176,7 @@
                         <div class="col-md-4">
                             Оптовые продажи:
                         </div>
-                        <div class="col-md-4">
+                        <div class="col-md-5">
                             <a href="mailto:order@vag-group.com">order@vag-group.com</a>
                         </div>
                     </div>
@@ -184,7 +184,7 @@
                         <div class="col-md-4">
                                 Розничаня сеть:
                         </div>
-                        <div class="col-md-4">
+                        <div class="col-md-5">
                             <a href="mailto:order2@vag-group.com">order2@vag-group.com</a>
                         </div>
                     </div>
@@ -192,7 +192,7 @@
                         <div class="col-md-4">
                                 Служба поддержки: 
                         </div>
-                        <div class="col-md-4">
+                        <div class="col-md-5">
                             <a href="mailto:help@vag-group.com"> help@vag-group.com</a>
                         </div>
                     </div>
@@ -213,7 +213,7 @@
                         <div class="col-md-5">
     
                             <div class="row">
-                                    <div class="col-md-4">
+                                    <div class="col-md-5">
                                             <h3>Мы в соцсетях:</h3>
                                     </div>
                                     <div class="col-md-6">
