--- a/products.html
+++ b/products.html
@@ -10,7 +10,7 @@
     <link href="/css/fonts.css" rel="stylesheet">
     <link href="/css/style.css" rel="stylesheet">
 </head>
-<body>
+<body data-spy="scroll" id='body'>
         <nav class="navbar main-header navbar-fixed-top">
                 <div class="container">
                   <!-- Brand and toggle get grouped for better mobile display -->
@@ -192,7 +192,7 @@
                             </div>
 
                         <div class="row">
-                            <div class="table-responsive">
+                            <div class="table-responsive" id='basket'>
                                 <table class="table">
                                     <thead>
                                         <tr>
@@ -248,7 +248,8 @@
     </main>
     
     <footer class="main-footer">
-        <div class="container">
+        <div class="container main-footer__wrap">
+                <a href="#body" class='footer-top'><img src="/img/arrow--top.png" alt=""></a>
             <div class="row">
                 <div class="col-md-6">
                     <h3>Телефоны:</h3>
