--- a/index.html
+++ b/index.html
@@ -277,6 +277,13 @@
                 <div class="container">
                     <h2 class='heading'><span>Партнеры</span></h2>
                     <img class="img-responsive center-block" src="/img/map.svg" alt="">
+                    <div class="list-group partners-list">
+                        <li class="list-group-item active">
+                          Харьков
+                        </li>
+                        <li class="list-group-item"><img src="/img/map-logo.png" alt=""> Проспект Гагарина 234/1</li>
+                        <li class="list-group-item"><img src="/img/map-logo.png" alt=""> Проспект Гагарина 234/1</li>
+                      </div>
                 </div>
             </section>
 
